# yankd

./: .gitignore  LICENSE  meson.build
src/: main.cpp
src/ui/: main.qml
